new fURI implementation is bangin'. have the original furi test suite passing against it -- except for generic polys (still need to work that out fully).